--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -23,7 +23,7 @@
     <% end %>
 
     <% if current_user %>
-      <%= link_to 'parks/new' do %>
+      <%= link_to '/parks/new' do %>
         <div class='card'>
           <p style ='font-size:80px; float: left; font-weight: 100; margin: 0; line-height:80px; width: 300px; text-align: center;'>
             +
