iterate on landing page design

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,14 +2,15 @@
 
 <div class='contents' style ='justify-content:center; align-items:center; padding-bottom:62px;'>
 
-  <!-- <div class = landing-background  style='color: white; padding-left: 40px;'> -->
+  <div class='landing-background'>
 
-    <h1> Welcome to the Doggo Playground </h1>
+    <h1> Welcome to Parkr </h1>
 
-    <h2> Like facebook for your dog. </h2>
+    <div class='landing-list'>Sign up and enter your dog's details into Parkr</div>
+    <div class='landing-list'>Select your favourite parks</div>
+    <div class='landing-list'>Automatically see your dog's friends who go to the same park</div>
+    <div class='landing-list'>Never miss a dog date again</div>
 
-    Keeps track of your dog’s favourite parks.
-
-  <!-- </div> -->
+  </div>
 
 </div>
