--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -9,67 +9,75 @@
 
   <h1>Parks</h1>
 
-  <div id="map" style="height:300px; width:500px;"></div>
+  <div style='display: flex;'>
 
-  <script>
-    function getLocation() {
-      navigator.geolocation.getCurrentPosition(initMap);
-    }
+    <div id="map" style="height:500px; width:800px;"></div>
 
-    function initMap(currentLocation) {
-      markers = [];
-      var locationMarker = {lat: <%= 'currentLocation.coords.latitude' %>, lng: <%=  'currentLocation.coords.longitude' %>};
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
-        center: locationMarker
-      });
-      addMarkers(map);
-    }
+    <div class = 'display-cards'>
 
 
 
-  function addMarkers(map) {
-    var locationMarker
-    <% @parks.each do |park| %>
-      <% if park.latitude.present? %>
-        var locationMarker = {lat: <%= park.latitude %>, lng: <%=  park.longitude %>};
-        var marker = new google.maps.Marker({
-          position: locationMarker,
-          map: map})
+      <% @parks.each do |park| %>
+        <%= link_to park do %>
+          <div class='card'>
+            <%= image_tag 'ParkProfile.svg' %>
+            <span style='font-size: 30px;'>
+              <%= park.name %>
+            </span>
+            <span style='font-size: 15px; padding-top: 20px;'>
+              <%= park.address %>
+            </span>
+          </div>
         <% end %>
-    <% end %>
-  }
-  </script>
-
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn3iZ9nsi06L5zuIqYTrK5StMaSBufPS4&callback=getLocation">
-  </script>
-
-  <div class = 'display-cards'>
-    <% @parks.each do |park| %>
-      <%= link_to park do %>
-        <div class='card'>
-          <%= image_tag 'ParkProfile.svg' %>
-          <span style='font-size: 30px;'>
-            <%= park.name %>
-          </span>
-          <span style='font-size: 15px; padding-top: 20px;'>
-            <%= park.address %>
-          </span>
-        </div>
       <% end %>
-    <% end %>
 
-    <% if current_user %>
-      <%= link_to '/parks/new' do %>
-        <div class='card'>
-          <%= image_tag 'ParkProfile.svg' %>
-          <span style ='font-size:80px;font-weight: 100; position: relative; top: -60px; text-align: center;'>
-            +
-          </span>
-        </div>
+      <% if current_user %>
+        <%= link_to '/parks/new' do %>
+          <div class='card'>
+            <%= image_tag 'ParkProfile.svg' %>
+            <span style ='font-size:80px;font-weight: 100; position: relative; top: -60px; text-align: center;'>
+              +
+            </span>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+
   </div>
 
 </div>
+
+
+<script>
+  function getLocation() {
+    navigator.geolocation.getCurrentPosition(initMap);
+  }
+
+  function initMap(currentLocation) {
+    markers = [];
+    var locationMarker = {lat: <%= 'currentLocation.coords.latitude' %>, lng: <%=  'currentLocation.coords.longitude' %>};
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 12,
+      center: locationMarker
+    });
+    addMarkers(map);
+  }
+
+
+
+function addMarkers(map) {
+  var locationMarker
+  <% @parks.each do |park| %>
+    <% if park.latitude.present? %>
+      var locationMarker = {lat: <%= park.latitude %>, lng: <%=  park.longitude %>};
+      var marker = new google.maps.Marker({
+        position: locationMarker,
+        map: map})
+      <% end %>
+  <% end %>
+}
+</script>
+
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn3iZ9nsi06L5zuIqYTrK5StMaSBufPS4&callback=getLocation">
+</script>
