Update landing page and change name

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -4,12 +4,30 @@
 
   <div class='landing-background'>
 
-    <h1> Welcome to Parkr </h1>
+    <h1> Welcome to ParkPups </h1>
 
-    <div class='landing-list'>Sign up and enter your dog's details into Parkr</div>
-    <div class='landing-list'>Select your favourite parks</div>
-    <div class='landing-list'>Automatically see your dog's friends who go to the same park</div>
+    <div class='landing-list'>Discover dog parks near you</div>
+    <div class='landing-list'>Find your dog's friends</div>
     <div class='landing-list'>Never miss a dog date again</div>
+
+    <% if current_user %>
+      <%= link_to '/dogs/new' do %>
+        <div class='card' style='margin: auto; margin-top: 60px; width: fit-content; height: fit-content;
+          font-size: 20px; text-align: center; padding: 20px;'>
+          Add your dog
+        </div>
+      <% end %>
+
+    <% else %>
+
+      <%= link_to '/signup' do %>
+        <div class='card' style='margin: auto; margin-top: 60px; width: fit-content; height: fit-content;
+          font-size: 20px; text-align: center; padding: 20px;'>
+          Get Started
+        </div>
+      <% end %>
+
+    <%end %>
 
   </div>
 
