--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -5,7 +5,7 @@
   <p id="notice"><%= notice %></p>
 
   <div class='add-new'>
-    <%= link_to 'Add a dog to Parkr', new_dog_path %>
+    <%= link_to 'Add a dog to ParkPups', new_dog_path %>
   </div>
 
   <h1 id='dogs'>Your Dogs</h1>
