--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,6 +1,6 @@
 <div class='contents'>
 
-  <h1> Add your dog to Parkr </h1>
+  <h1> Add your dog to ParkPups </h1>
 
 <div class= 'form'>
   <%= render 'form', dog: @dog %>
