--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
 <div id = 'sidebar'>
   <%= link_to("/") do %>
     <div id='sidebarHeader' class = "sidebarTab">
-      <h2 style = 'text-align: center;'>Parkr</h2>
+      <h2 style = 'text-align: center;'>ParkPups</h2>
         <p style = 'text-align: center;'>Where your dog <br> wants to be</p>
     </div>
   <% end %>
