--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -2,7 +2,7 @@
 <div id='topbar' style = 'display: flex; flex-direction: row;'>
 
   <div style = 'font-weight: bold'>
-    <%= link_to 'Parkr', "/"  %>
+    <%= link_to 'ParkPups', "/"  %>
   </div>
 
   <div style = 'margin-left: 40px;'>
