--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,7 +145,7 @@ input[type='checkbox'] {
    background-color: inherit;
    color: inherit;
    width: 100vw;
-   padding-top: 62px;
+   padding-left: 100px;
    position: relative;
    /*align-items: center;
    justify-content: center;*/
@@ -218,15 +218,15 @@ input[type='checkbox'] {
 
  #topbar {
    width: calc(100vw - 60px);
-   height: 30px;
+   height: fit-content;
    background: #2E4600 ;
    color: #EAEBE9;
    position: absolute;
    z-index: 10;
    padding-right: 60px;
    padding-left: 40px;
-   padding-top: 20px;
-   padding-bottom: 10px;
+   padding-top: 10px;
+   padding-bottom: 5px;
    /*text-align: right;*/
    box-shadow: 0px 3px 5px #383937;
  }
@@ -251,50 +251,29 @@ input[type='checkbox'] {
  /* sidebar stuff*/
 
  #sidebar {
-   background-color:  #001B10;
+   background: #2E4600 ;
    color: #EAEBE9;
-   display: flex;
-   flex-direction: column;
-   width: 150px;
+   width: fit-content;
    height: 100vh;
-   /*text-decoration: bold;*/
-   position: relative;
-   border: 1px, #001B10;
+   position: fixed;
+   top: 0;
+   left: 0;
+   z-index: 10;
+   padding-right: 5px;
+   padding-left: 5px;
+   padding-top: 5px;
+   padding-bottom: 5px;
+   /*text-align: right;*/
+   box-shadow: 3px 3px 5px #383937;
  }
 
-#sidebarHeader {
-  padding-bottom: 20px;
-  padding-left: 0;
-  width: 150px;
-  height: 100px;
-  /*z-index: -10;*/
-  position: relative;
-}
 
- #sidebarHeader:hover {
-   /*background-color: black;*/
- }
-
-.sidebarTab {
-  height: 50px;
-  width: 200px;
-  background-color: #001B10;
-  color: #EAEBE9;
-  /*border: none;*/
-  padding-left: 20px;
-  /*text-decoration: bold;*/
-  vertical-align: center;
-  padding-top: 20px;
-   border: 3px, #001B10;
+#sidebar a {
+  padding: 10px;
+  border-radius: 5px;
 }
 
 
-.sidebarTab:hover {
-  background-color:  #013429;
-  color: #EAEBE9;
-}
-
-.activeTab {
-  background-color: #B3C100;
-  color: black;
+#sidebar a:hover {
+  background-color: #213900;
 }
