--- a/app/views/parks/_dog_form.html.erb
+++ b/app/views/parks/_dog_form.html.erb
@@ -6,24 +6,27 @@
 
 <%= form_tag(controller: "parks", action: "add_dog", method: "post") do  %>
 
+  <!-- <p id="error"><%= flash[:error] %></p> -->
+
   <div class="field" >
+
+    <%= label_tag :dog_name, "Select a dog:" %>
+
     <%= select_tag( :dog_name,
     options_for_select((@user.dogs - @park.dogs).collect{ |dog| [dog.name, dog.name]}),
-    {:style => 'width:180px; background-color:white;'})
+    {:style => 'width:150px; background-color:white; height: 20px;'})
     %>
 
-    <p id="error"><%= flash[:error] %></p>
   </div>
 
   <div class="field">
     <%= label_tag :time, "When do you usually walk this dog?" %>
-    <div class='row'>
-      <%= text_field_tag :time %>
-    </div>
+
+    <%= select_tag :time, options_for_select(["6am", "7am", "8am", "9am", "10am", "11am", "12pm",
+      "1pm", "2pm", "3pm", "4pm", "5pm", "6pm", "7pm", "8pm", "9pm"]), {:style => 'width: 80px; background-color:white;'} %>
+
   </div>
 
-
-    <%= submit_tag "Add Dog" %>
-
+  <%= submit_tag "Add Dog", {:style => 'width: fit-content; align-self: right; padding: 5px;'}%>
 
 <% end %>
