--- a/app/views/parks/_form.html.erb
+++ b/app/views/parks/_form.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <div id="map" style="height:300px; width:500px;"></div>
+  <!-- <div id="map" style="height:300px; width:500px;"></div> -->
 
   <%= form.hidden_field :longitude, id: :longitude %>
   <%= form.hidden_field :latitude, id: :latitude %>
