--- a/app/views/parks/_form.html.erb
+++ b/app/views/parks/_form.html.erb
@@ -98,8 +98,9 @@
     document.getElementById('latitude').value = latLng.lat()
     document.getElementById('longitude').value = latLng.lng()
   }
-</script>
 
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn3iZ9nsi06L5zuIqYTrK5StMaSBufPS4&callback=getLocation">
+  function onMapLoad() {
+    getLocation()
+  }
+
 </script>
