Show user's dogs above other dogs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -194,7 +194,7 @@ input[type='checkbox'] {
    width:55px;
    border-radius:55px;
    border:3px solid #2E4600;
-   background-color: #D1D2D0;
+   background-color: #C4C5C3;
    left:50%;
    margin-left:-30px;
    top: -65px;
