Make minor style changes to forms

--- a/app/views/parks/_dog_form.html.erb
+++ b/app/views/parks/_dog_form.html.erb
@@ -27,6 +27,6 @@
 
   </div>
 
-  <%= submit_tag "Add Dog", {:style => 'width: fit-content; align-self: right; padding: 5px;'}%>
+  <%= submit_tag "Join Park", {:style => 'width: fit-content; align-self: right; padding: 5px;'}%>
 
 <% end %>
