--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -16,10 +16,10 @@
     <% end %>
   </div>
 
-  <div>
+  <!-- <div>
     <strong>Address:</strong>
     <%= @park.address %>
-  </div>
+  </div> -->
 
   <div style='display:flex'>
     <div>
