Add footer to landing page

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,6 +1,6 @@
 <!-- View for landing page -->
 
-<div class='contents' style ='justify-content:center; align-items:center; padding-bottom:62px;'>
+<div class='contents' style ='justify-content:center; align-items:center; padding-bottom:62px; '>
 
   <div class='landing-background'>
 
@@ -30,5 +30,16 @@
     <%end %>
 
   </div>
+
+  <footer style = "margin-top:200px">
+    <div style = "display: flex">
+      <div style='width: 35px; margin-right: 0px; color: #B7B8B6; '>
+        <%= image_tag 'mail.svg' %>
+      </div>
+      <span style = "padding: 5px; color: #383937; font-family: serif">
+        parkpupsapp@gmail.com
+      </span>
+    <div>
+  </footer>
 
 </div>
