--- a/app/views/parks/_form.html.erb
+++ b/app/views/parks/_form.html.erb
@@ -57,14 +57,20 @@
   var markers;
 
   function getLocation() {
-    navigator.geolocation.getCurrentPosition(initMap);
+    // navigator.geolocation.getCurrentPosition(initMap);
+    initMap({
+      coords: {
+        latitude: -37.814251,
+        longitude: 144.963169
+      }
+    })
   }
 
   function initMap(currentLocation) {
     markers = [];
     var locationMarker = {lat: <%= @park.latitude || 'currentLocation.coords.latitude' %>, lng: <%= @park.longitude || 'currentLocation.coords.longitude' %>};
     var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 15,
+      zoom: 11,
       center: locationMarker
     });
 
