--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -83,7 +83,7 @@
                 <%= dog.name %>
               </span> <br>
               <span style='font-size: 15px; text-align: center; padding: 0;'>
-                <%= dog.walks.find_by(park: @park).time %>
+                <%= JSON.parse(dog.walks.find_by(park: @park).time).join(' | ') %>
               </span>
             </div>
           <% end %>
